service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websay
spec:
  ports:
  - name: 80-1323
    port: 80
    protocol: TCP
    targetPort: 1323
  selector:
    app: websay-dev
  type: ClusterIP
