ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
  name: websay-dev
spec:
  rules:
    - host: websay.dev.tgik116.bryanl.dev
      http:
        paths:
          - backend:
              serviceName: websay
              servicePort: 80
  tls:
    - hosts:
        - websay.dev.tgik116.bryanl.dev
      secretName: websay-dev
